# ForgeFlow

./: .env.example  .gitignore  README.md  allocate_machine.py  create_schedule.py  explain_schedule.py  limiter.py  main.py  nim_client.py  prioritize_orders.py  pyproject.toml  requirements.txt  settings.py  simulate_what_if.py  verify_inventory.py
.github/workflows/: ci.yml
agents/: __init__.py
agents/explanation_agent/: __init__.py  register.py
agents/inventory_agent/: __init__.py  inventory_checker.py  register.py
agents/machine_agent/: __init__.py  machine_allocator.py  register.py
configs/: explanation_agent_config.yml  inventory_agent_config.yml  machine_agent_config.yml  order_agent_config.yml  scheduler_agent_config.yml
data/: bom.json  inventory.csv  machines.csv  orders.csv
dependencies/: auth.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
models/: __init__.py  common_models.py  explanation_models.py  factory_copilot_models.py  inventory_models.py  machine_models.py  order_models.py  what_if_models.py
routes/: __init__.py  auth_routes.py  copilot_routes.py  data_routes.py  explanation_routes.py  onboarding_routes.py  schedule_routes.py  shift_routes.py
services/: __init__.py  bom_service.py  data_service.py  factory_copilot_service.py  production_explanation_service.py  validation_service.py  what_if_simulation_service.py
supabase/: schema.sql
tests/: conftest.py  test_api_auth.py  test_bom_service.py  test_scheduler.py  test_whatif.py
(+58 files in other folders)
